plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.13'

    id("com.github.johnrengelman.shadow") version "7.1.2"

    id 'org.beryx.runtime' version '1.12.5'
}

repositories {
    mavenLocal()
    maven {
        url = uri('https://repo.maven.apache.org/maven2/')
    }
    gradlePluginPortal()

}

dependencies {
    implementation 'com.google.code.gson:gson:2.10.1'
    implementation group: 'org.apache.shiro', name: 'shiro-core', version: '1.11.0'
    implementation 'com.jfoenix:jfoenix:9.0.10'

    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.2'
    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.9.2'

    compileOnly 'org.projectlombok:lombok:1.18.26'
    annotationProcessor 'org.projectlombok:lombok:1.18.26'

    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.14.2'
    implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.14.2'
}

mainClassName = 'com.github.leanfe.Application'
applicationDefaultJvmArgs = ['-Djava.net.useSystemProxies=true', '--add-exports javafx.web/com.sun.webkit.dom=ALL-UNNAMED']

group = 'com.github.leanfe'
version = '1.0.0'
description = 'PuffyMC-Launcher'

java {
    sourceCompatibility = JavaVersion.VERSION_18
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

application {
    mainClass = "com.github.leanfe.Application"
    applicationName = 'PuffyMC Launcher'
}

javafx {
    modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.web' ]
}

runtime {
    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']

// Uncomment and adjust the code below if you want to generate images for multiple platforms.
//    targetPlatform("lin") {
//        jdkHome = jdkDownload("https://github.com/AdoptOpenJDK/openjdk15-binaries/releases/download/jdk-15.0.2%2B7/OpenJDK15U-jdk_x64_linux_hotspot_15.0.2_7.tar.gz")
//    }
//    targetPlatform("mac") {
//        jdkHome = jdkDownload("https://github.com/AdoptOpenJDK/openjdk15-binaries/releases/download/jdk-15.0.2%2B7/OpenJDK15U-jdk_x64_mac_hotspot_15.0.2_7.tar.gz") {
//            downloadDir = "$buildDir/myMac"
//            archiveName = "my-mac-jdk"
//            archiveExtension = "tar.gz"
//            pathToHome = "jdk-15.0.2+7/Contents/Home"
//            overwrite = true
//        }
//    }
    targetPlatform("win") {
        jdkHome = jdkDownload("https://github.com/AdoptOpenJDK/openjdk18-binaries/releases/download/jdk-18.0.2%2B7/OpenJDK18U-jdk_x64_windows_hotspot_18.0.2_7.zip")
    }

    launcher {
        noConsole = true
    }
    jpackage {
        // Uncomment and adjust the following line if your runtime task is configured to generate images for multiple platforms
        // targetPlatformName = "mac"

        def currentOs = org.gradle.internal.os.OperatingSystem.current()
        def imgType = currentOs.windows ? 'ico' : currentOs.macOsX ? 'icns' : 'png'
        imageOptions += ['--icon', "src/main/resources/com/github/leanfe/icon/icon.$imgType"]
        installerOptions += ['--resource-dir', "src/main/resources/com/github/leanfe"]
        installerOptions += ['--vendor', 'Asyky Group']

        if(currentOs.windows) {
            installerOptions += ['--win-per-user-install', '--win-dir-chooser', '--win-menu', '--win-shortcut']
        }
        else if (currentOs.linux) {
            installerOptions += ['--linux-package-name', 'puffymc','--linux-shortcut']
        }
        else if (currentOs.macOsX) {
            installerOptions += ['--mac-package-name', 'PuffyMC']
        }
    }
}